--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,12 @@
-img.d-block {
-    height: 200px;
-    width: auto;
-}
-
 .jumbotron {
-    
+    margin-top: 15px;
+    border: 8px #337ab7 solid;
 }
 
-form {
-    margin-top: 50px;
-}
-
-label {
+h3 {
     font-weight: bold;
+}
+
+.panel-heading {
+    background: black;
 }
