--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,11 @@ h2, h3 {
     font-weight: bold;
 }
 
+.panel-title {
+    font-size: 25px;
+    /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif */
+}
+
 h2 {
     font-size: 50px;
 }
